// نظام إدارة عيادات الأسنان (Multi-tenant)
// انسخ محتوى هذا الملف والصقه مباشرة في محرر dbdiagram.io
// أو استورده كملف .dbml

Table admin_users {
  id uuid [pk]
  name varchar
  email varchar [unique]
  password_hash varchar
  is_active boolean
  created_at timestamp

  Note: 'Super admin - خارج نطاق أي tenant تمامًا، route/guard منفصل'
}

Table tenants {
  id uuid [pk]
  name varchar
  subdomain varchar [unique]
  locale varchar [default: 'ar', note: 'default: ar']
  status varchar
  created_at timestamp
}

Table subscriptions {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  plan_type varchar
  status varchar [note: 'trial, active, expired']
  start_date date
  end_date date
  marked_paid_at timestamp
  notes text
}

Table users {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  name varchar
  email varchar [unique]
  phone varchar
  password_hash varchar
  role varchar [note: 'owner, doctor, receptionist']
  locale varchar [note: 'null = يرث لغة العيادة']
  is_active boolean
  created_at timestamp
}

Table patients {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  full_name varchar
  phone varchar
  date_of_birth date
  gender varchar
  medical_history jsonb
  notes text
  created_at timestamp

  indexes {
    medical_history [type: gin, note: 'بحث داخل محتوى الـ JSON']
  }
}

Table appointments {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_id uuid [ref: > patients.id]
  doctor_id uuid [ref: > users.id, note: 'الطبيب الذي كشف فعليًا - يُحدَّث عند تغيّر الطبيب']
  created_by uuid [ref: > users.id]
  scheduled_at timestamp
  duration_minutes int
  status varchar [note: 'scheduled, completed, cancelled, no_show']
  notes text
  created_at timestamp

  indexes {
    (tenant_id, patient_id) [name: 'idx_appt_tenant_patient']
    (tenant_id, scheduled_at) [name: 'idx_appt_tenant_scheduled']
  }
}

Table tooth_records {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_id uuid [ref: > patients.id]
  appointment_id uuid [ref: > appointments.id]
  recorded_by uuid [ref: > users.id]
  tooth_number varchar [note: 'FDI, 11-48']
  condition varchar [note: 'healthy, decayed, filled, missing, crown, root_canal, needs_extraction, impacted']
  treatment_status varchar [note: 'planned, in_progress, completed']
  notes text
  created_at timestamp

  indexes {
    (tenant_id, patient_id, tooth_number) [name: 'idx_tooth_tenant_patient_number']
    (tenant_id, patient_id, created_at) [name: 'idx_tooth_tenant_patient_created']
  }

  Note: 'جدول تاريخي - لا يوجد unique constraint على (patient_id, tooth_number) عمدًا'
}

Table services {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  name_ar varchar
  name_en varchar
  default_price decimal
  is_active boolean
  is_other boolean [note: 'true فقط لصف (أخرى/Other) الثابت']
}

Table invoices {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_id uuid [ref: > patients.id]
  appointment_id uuid [ref: > appointments.id]
  created_by uuid [ref: > users.id]
  total_amount decimal
  status varchar [note: 'paid, unpaid, partial - يُفضَّل اشتقاقه من مجموع payments']
  created_at timestamp

  indexes {
    (tenant_id, patient_id) [name: 'idx_invoices_tenant_patient']
  }
}

Table invoice_items {
  id uuid [pk]
  invoice_id uuid [ref: > invoices.id]
  service_id uuid [ref: > services.id, not null, note: 'NOT NULL - يشير لصف Other للحالات النادرة']
  patient_treatment_id uuid [ref: > patient_treatments.id, note: 'nullable - بند السعر المتفق عليه']
  description varchar [note: 'الوصف الفعلي - إلزامي عمليًا عند استخدام Other']
  price decimal
  quantity int
}

Table payments {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  invoice_id uuid [ref: > invoices.id]
  amount decimal
  paid_at timestamp
  method varchar [note: 'cash, transfer, card...']
  received_by uuid [ref: > users.id]
  notes text

  indexes {
    (tenant_id, invoice_id) [name: 'idx_payments_tenant_invoice']
  }
}

Table audit_logs {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  user_id uuid [ref: > users.id, note: 'nullable - لعمليات super admin']
  action varchar [note: 'created, updated, deleted, restored']
  auditable_type varchar [note: 'اسم الموديل']
  auditable_id uuid [note: 'id الصف المتأثر']
  old_values jsonb
  new_values jsonb
  created_at timestamp

  indexes {
    (tenant_id, auditable_type, auditable_id) [name: 'idx_audit_tenant_auditable']
  }

  Note: 'append-only - لا تعديل أو حذف على صفوفه. يُفعَّل فقط على الموديلات الحساسة عبر Trait موحّد'
}

Table xray_attachments {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_id uuid [ref: > patients.id]
  appointment_id uuid [ref: > appointments.id]
  file_url varchar
  file_type varchar
  uploaded_by uuid [ref: > users.id]
  created_at timestamp

  indexes {
    (tenant_id, patient_id) [name: 'idx_xray_tenant_patient']
  }
}

Table inventory_items {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  name varchar
  unit varchar
  current_quantity decimal
  minimum_threshold decimal
  is_active boolean
}

Table components {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  name_ar varchar
  name_en varchar
  default_price decimal
  unit varchar
  current_quantity decimal
  minimum_threshold decimal
  inventory_item_id uuid [ref: > inventory_items.id]
  is_active boolean

  indexes {
    (tenant_id, is_active) [name: 'idx_components_tenant_active']
  }
}

Table treatment_templates {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  name_ar varchar
  name_en varchar
  category varchar [note: 'medical, preventive, cosmetic, orthodontic, surgical, other']
  description text
  default_price decimal
  estimated_duration_minutes int
  visit_type varchar [note: 'مشتق من عدد الخطوات: single_visit / multiple_visit']
  is_active boolean
  version int [default: 1]
  is_current boolean [default: true]
  root_template_id uuid [ref: > treatment_templates.id]
  previous_version_id uuid [ref: > treatment_templates.id]
  created_at timestamp

  indexes {
    (tenant_id, root_template_id, is_current) [name: 'idx_templates_current']
    (tenant_id, root_template_id, version) [unique]
  }

  Note: 'التعديل لا يحدث في مكانه - ينشئ version+1 ويترك العلاجات القديمة على النسخة السابقة'
}

Table treatment_template_steps {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  treatment_template_id uuid [ref: > treatment_templates.id]
  name_ar varchar
  name_en varchar
  description text
  step_order int
  is_optional boolean
  is_repeatable boolean
  default_duration_minutes int
}

Table treatment_template_components {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  treatment_template_step_id uuid [ref: > treatment_template_steps.id]
  component_id uuid [ref: > components.id]
  quantity decimal
  free_quantity decimal
  unit_price decimal
}

Table treatment_plans {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_id uuid [ref: > patients.id]
  title varchar
  status varchar [note: 'draft, active, completed, cancelled']
  created_at timestamp

  indexes {
    (tenant_id, patient_id) [name: 'idx_plans_tenant_patient']
  }
}

Table patient_treatments {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_id uuid [ref: > patients.id]
  treatment_plan_id uuid [ref: > treatment_plans.id]
  treatment_template_id uuid [ref: > treatment_templates.id]
  treatment_template_version int
  agreed_price decimal
  clinical_status varchar [note: 'planned, in_progress, on_hold, completed, cancelled, failed']
  cancellation_reason text
  financial_status varchar [note: 'unpaid, partial, paid']
  consent_status varchar [note: 'not_required, pending, obtained, declined']
  consent_document_ref varchar
  parent_treatment_id uuid [ref: > patient_treatments.id]
  treatment_type varchar [note: 'original, retreatment']
  dentist_id uuid [ref: > users.id]
  diagnosis text
  priority varchar
  notes text
  started_at timestamp
  completed_at timestamp
  cancelled_at timestamp
  created_by uuid [ref: > users.id]
  created_at timestamp

  indexes {
    (tenant_id, clinical_status) [name: 'idx_pt_clinical']
    (tenant_id, financial_status) [name: 'idx_pt_financial']
  }

  Note: 'الحالات السريرية والمالية والموافقة مستقلة. فاتورة واحدة ببند agreed_price عند الإنشاء'
}

Table patient_treatment_teeth {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_treatment_id uuid [ref: > patient_treatments.id]
  tooth_number varchar [note: 'FDI']
  created_at timestamp

  indexes {
    (patient_treatment_id, tooth_number) [unique]
  }
}

Table treatment_sessions {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  patient_treatment_id uuid [ref: > patient_treatments.id]
  appointment_id uuid [ref: > appointments.id]
  dentist_id uuid [ref: > users.id]
  session_date timestamp
  status varchar [note: 'scheduled, completed, cancelled, no_show']
  notes text
  stock_applied boolean
  created_at timestamp

  indexes {
    (tenant_id, patient_treatment_id) [name: 'idx_sessions_treatment']
    (tenant_id, appointment_id) [name: 'idx_sessions_appointment']
  }
}

Table treatment_session_steps {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  treatment_session_id uuid [ref: > treatment_sessions.id]
  treatment_template_step_id uuid [ref: > treatment_template_steps.id]
  custom_step_name varchar
  custom_step_description text
  occurrence_number int
  status varchar [note: 'done, skipped']
  notes text
}

Table patient_treatment_components {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  treatment_session_id uuid [ref: > treatment_sessions.id]
  component_id uuid [ref: > components.id]
  name varchar
  unit_price decimal
  quantity decimal
  free_quantity decimal
  unit varchar
  inventory_item_id uuid [ref: > inventory_items.id]
}
